--- a/index.css
+++ b/index.css
@@ -43,15 +43,16 @@ button{
     display:flex;
     justify-content: space-between;
 }
-/* .search{
+/* search */
+.search{
     width:400px;
     box-shadow: 0 0 5px rgba(0,0,0,0.3);
     position: relative;
-    background-color: aqua;
+    /* background-color: aqua; */
     border-radius: 5px;
     overflow: hidden;
-} */
-/* .search input{
+}
+.search input{
     width:100%;
     padding:10px 12px;
     outline: 0;
@@ -61,4 +62,38 @@ button{
 }
 .search i{
     position: absolute;
-} */
+    top:0.8rem;
+    right:1rem;
+    cursor: pointer;
+}
+/* dropdown */
+.dropdownCon{
+    width:200px;
+    position: relative;
+}
+.dropdown{
+    width:100%;
+    padding:14px 10px;
+    /* background-color: aqua; */
+    box-shadow: 0 0 5px rgba(0,0,0,0.3);
+    border-radius: 5px;
+    display:flex;
+    justify-content:space-between;
+    cursor:pointer;
+    font-size: 15px;
+}
+.dropdown p{
+    letter-spacing: 0.5px;
+}
+.drop{
+    width:100%;
+    position: absolute;
+    box-shadow: 0 0 5px rgba(0,0,0,0.3);
+    top:3.5rem;
+    padding:10px 14px;
+    border-radius: 5px;
+}
+.drop p{
+ margin:5px 0;
+ 
+}
