--- a/index.css
+++ b/index.css
@@ -92,8 +92,29 @@ button{
     top:3.5rem;
     padding:10px 14px;
     border-radius: 5px;
+    background-color: aliceblue;
 }
 .drop p{
  margin:5px 0;
  
+}
+
+/* main */
+
+.main{
+    padding:30px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+}
+.country{
+    min-height: 400px;
+    box-shadow: 0 0 5px rgba(0,0,0,0.3);
+}
+.country-img{
+    height:250px;
+
+}
+.country-img img{
+    width:100%;
+    height:100%;
 }
