--- a/index.css
+++ b/index.css
@@ -105,10 +105,14 @@ button{
     padding:30px;
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+    grid-gap: 20px;
 }
 .country{
-    min-height: 400px;
+    min-height: 300px;
     box-shadow: 0 0 5px rgba(0,0,0,0.3);
+    width:300px;
+    border-radius: 5px;
+    overflow: hidden;
 }
 .country-img{
     height:250px;
@@ -117,4 +121,18 @@ button{
 .country-img img{
     width:100%;
     height:100%;
+}
+.country-info{
+  padding:22px 18px;
+}
+.country-info h5{
+    padding:10px 0;
+    font-size:20px;
+    letter-spacing: 1px;
+}
+.country-info p{
+    letter-spacing: 1px;
+}
+.country-info p>strong{
+    font-weight: 600;
 }
