--- a/index.css
+++ b/index.css
@@ -11,6 +11,9 @@ body{
     background-color: hsl(0, 0%, 98%);
     font-family: "Nunito Sans",sans-serif;
 }
+i{
+    cursor: pointer;
+}
 #container{
     width:100%;
     padding:30px;
@@ -44,7 +47,7 @@ button{
     justify-content: space-between;
 }
 /* search */
-.search{
+.form{
     width:400px;
     box-shadow: 0 0 5px rgba(0,0,0,0.3);
     position: relative;
@@ -52,7 +55,7 @@ button{
     border-radius: 5px;
     overflow: hidden;
 }
-.search input{
+.form input{
     width:100%;
     padding:10px 12px;
     outline: 0;
@@ -60,7 +63,7 @@ button{
     font-size: 15px;
     letter-spacing: 0.5px;
 }
-.search i{
+.form i{
     position: absolute;
     top:0.8rem;
     right:1rem;
@@ -93,11 +96,16 @@ button{
     padding:10px 14px;
     border-radius: 5px;
     background-color: aliceblue;
+    cursor: pointer;
 }
 .drop p{
  margin:5px 0;
  
 }
+.showDropdown{
+    display:none
+}
+
 
 /* main */
 
@@ -121,6 +129,7 @@ button{
 .country-img img{
     width:100%;
     height:100%;
+    object-fit: cover;
 }
 .country-info{
   padding:22px 18px;
